force-app/main/default/objects/Flight__c/fields/Business_tickets__c.field-meta.xml
<CustomField>
    <fullName>Business_tickets__c</fullName>
    <label>Business_tickets</label>
    <summaryFilterItems>
        <field>Ticket__c.Class__c</field>
        <operation>equals</operation>
        <value>Business</value>
    </summaryFilterItems>
    <summaryForeignKey>Ticket__c.Flight__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>