force-app/main/default/objects/Flight__c/fields/Departure_date__c.field-meta.xml
<CustomField>
    <fullName>Departure_date__c</fullName>
    <label>Departure date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>