force-app/main/default/objects/Flight__c/fields/Economy_tickets__c.field-meta.xml
<CustomField>
    <fullName>Economy_tickets__c</fullName>
    <label>Economy_tickets</label>
    <summaryFilterItems>
        <field>Ticket__c.Class__c</field>
        <operation>equals</operation>
        <value>Economy</value>
    </summaryFilterItems>
    <summaryForeignKey>Ticket__c.Flight__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>