force-app/main/default/objects/Flight__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Flights_from</relationshipLabel>
    <relationshipName>Flights_from</relationshipName>
    <type>Lookup</type>
</CustomField>