force-app/main/default/objects/Flight__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Flights_to</relationshipLabel>
    <relationshipName>Flights_to</relationshipName>
    <type>Lookup</type>
</CustomField>